[package]
name         = "ab-api"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Native HTTP API (axum router, shared state, error mapping). Mounted at /api/v1/ on the main port; pairing + token auth."

[lints]
workspace = true

[dependencies]
ab-core         = { workspace = true }
ab-db           = { workspace = true }
# `ab-tag-read` + `ab-catalog` added in slice C5.4 so router.rs
# can reference the typed `STAGE_ID` consts directly. No compile-
# graph change — both crates were already pulled transitively via
# `ab-transcript` + the daemon's stage registration.
ab-tag-read     = { workspace = true }
ab-catalog      = { workspace = true }
ab-fingerprint  = { workspace = true }
ab-pipeline     = { workspace = true }
ab-scan         = { workspace = true }
ab-transcript   = { workspace = true }
ab-speech       = { workspace = true }
axum        = { workspace = true }
chrono      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sqlx        = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true }
tracing     = { workspace = true }
