[package]
name         = "ab-api"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Native HTTP API (axum router, shared state, error mapping). Mounted at /api/v1/ on the main port; pairing + token auth."

[lints]
workspace = true

[dependencies]
ab-core         = { workspace = true }
ab-db           = { workspace = true }
ab-background   = { workspace = true }
# `ab-tag-read` + `ab-catalog` added in slice C5.4 so router.rs
# can reference the typed `STAGE_ID` consts directly. No compile-
# graph change — both crates were already pulled transitively via
# `ab-transcript` + the daemon's stage registration.
ab-tag-read     = { workspace = true }
ab-catalog      = { workspace = true }
ab-audiologo    = { workspace = true }
ab-fingerprint  = { workspace = true }
# Scheduler submission list references `ab_transcode::stage::STAGE_ID`
# so `POST /library/scan` submits new books to transcode-m4b
# (ADR-0027) alongside every other per-book stage.
ab-transcode    = { workspace = true }
ab-pipeline     = { workspace = true }
ab-progress     = { workspace = true }
ab-scan         = { workspace = true }
ab-transcript   = { workspace = true }
ab-speech       = { workspace = true }
# Direct dep so `crate::pairing` can reach
# `argon2::password_hash::rand_core::OsRng` for the pairing-code
# mint. `ab_core::auth` already pulls it; the explicit declaration
# keeps cargo's unused-dep lint happy.
argon2      = { workspace = true }
async-trait = { workspace = true }
axum        = { workspace = true }
chrono      = { workspace = true }
# B.4: ApiState carries the compiled scan_excludes GlobSet.
globset     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sqlx        = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }
