[package]
name         = "ab-audio"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Pure-Rust audio probe (Lofty) plus Swift FFI bridge for AVFoundation transcode/encode and Apple Intelligence (SpeechAnalyzer, NLLanguageRecognizer, FoundationModels). Tag-read lives in ab-tag-read; PCM decode for fingerprinting lives in ab-fingerprint."

[lints]
workspace = true

[dependencies]
ab-core   = { workspace = true }
anyhow    = { workspace = true }
# Lofty handles probe + decode for every container we care about
# (m4b / m4a / mp3 / aac / flac / ogg / opus). Used here for the
# duration-probe in `info::probe_duration_ms`. Tag-read also uses
# lofty for the full tag-extraction pass; the two crates share
# the same workspace pin.
lofty     = { workspace = true }
thiserror = { workspace = true }
tokio     = { workspace = true }
tracing   = { workspace = true }

[dev-dependencies]
# Round-trip transcode test wants a writable tmp dir.
tempfile  = { workspace = true }
tokio     = { workspace = true, features = ["macros", "rt-multi-thread"] }
