[package]
name         = "ab-audiologo"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Publisher-jingle (intro/outro) detection via RMS thumbprint matching, silence localisation, and transcript corroboration."

[lints]
workspace = true

[dependencies]
ab-core             = { workspace = true }
ab-audio            = { workspace = true }
ab-db               = { workspace = true }
ab-fingerprint      = { workspace = true }
ab-pipeline         = { workspace = true }
ab-transcript       = { workspace = true }
async-trait         = { workspace = true }
rusty-chromaprint   = { workspace = true }
serde               = { workspace = true }
sqlx                = { workspace = true }
thiserror           = { workspace = true }
tokio               = { workspace = true }
tracing             = { workspace = true }

[dev-dependencies]
tempfile       = { workspace = true }
tokio-util     = { workspace = true }
