[package]
name         = "ab-background"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Background-task registry running at Priority::Idle. ADR-0035."

[lints]
workspace = true

[dependencies]
ab-core     = { workspace = true }
ab-db       = { workspace = true }
async-trait = { workspace = true }
serde       = { workspace = true }
sqlx        = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
