[package]
name         = "ab-catalog"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Audnexus + Audible clients for book metadata enrichment."

[lints]
workspace = true

[dependencies]
ab-core     = { workspace = true }
ab-db       = { workspace = true }
ab-pipeline = { workspace = true }
# For Stage::requires() typed dependencies on tag-read.
ab-tag-read = { workspace = true }
async-trait = { workspace = true }
mp4ameta    = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sqlx        = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
url         = { workspace = true }

[dev-dependencies]
tempfile   = { workspace = true }
tokio-util = { workspace = true }
