[package]
name         = "ab-catalog"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Audnexus + Audible clients for book metadata enrichment."

[lints]
workspace = true

[dependencies]
ab-core     = { workspace = true }
ab-db       = { workspace = true }
ab-pipeline = { workspace = true }
# For Stage::requires() typed dependencies on read-tags.
ab-tag-read = { workspace = true }
async-trait = { workspace = true }
# Used by `release_state` to parse Audible `release_date` /
# `publication_datetime` fields (RFC 3339 or date-only) and
# compare against "now" for the released/scheduled/announced
# classification (ADR-0050 § 1).
chrono      = { workspace = true }
# Used for MP3 CHAP-frame access: lofty parses the ID3v2 tag,
# surfaces CHAP as `Frame::Binary` (the spec frame is not in
# lofty's typed set), and `mp3_chap` hand-rolls the chapter
# decode on the binary body.
lofty       = { workspace = true }
mp4ameta    = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sqlx        = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
url         = { workspace = true }
# v4 (random) for the Android-screen endpoint's `session_id`
# parameter (ADR-0050 § 2). The session_id isn't security-
# relevant — Audible's screen endpoint takes it for telemetry —
# but using a real UUIDv4 gives us a 32-char hex string that
# matches Libex's session-id shape without an additional rand
# dep on top of the workspace's existing uuid.
uuid        = { workspace = true }

[dev-dependencies]
tempfile   = { workspace = true }
tokio-util = { workspace = true }
