[package]
name         = "ab-core"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Shared types, errors, IDs, build-info constants, and the Tunables config. Zero I/O — pure data + traits."

[lints]
workspace = true

[dependencies]
chrono     = { workspace = true }
# Layered TOML + env config loader for `Tunables::load`. Pulled
# in here (not in the daemon) so every binary that uses
# `Tunables` reaches the same merged value — `aborg` (CLI),
# `aborg-daemon`, and future `aborg-tools` invocations all read
# `config.toml` + AB_* env identically.
figment    = { workspace = true }
once_cell  = { workspace = true }
serde      = { workspace = true }
thiserror  = { workspace = true }
toml       = { workspace = true }
tracing    = { workspace = true }
uuid       = { workspace = true }

[build-dependencies]
toml = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
