[package]
name         = "ab-core"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Shared types, errors, IDs, build-info constants, and the Tunables config. Zero I/O — pure data + traits."

[lints]
workspace = true

[dependencies]
# argon2id PHF for low-entropy secret material (pairing codes,
# future user passwords). The `password-hash` re-export gives us
# the PHC string format so encoded outputs round-trip
# self-describingly (params + salt embedded).
argon2     = { workspace = true }
# blake3 — fast cryptographic hash for high-entropy API token
# storage. See `auth::hash_api_token` for the "why fast for
# random tokens, why slow for passwords" rationale.
blake3     = { workspace = true }
chrono     = { workspace = true }
# Layered TOML + env config loader for `Tunables::load`. Pulled
# in here (not in the daemon) so every binary that uses
# `Tunables` reaches the same merged value — `aborg` (CLI),
# `aborg-daemon`, and future `aborg-tools` invocations all read
# `config.toml` + AB_* env identically.
figment    = { workspace = true }
once_cell  = { workspace = true }
serde      = { workspace = true }
# B.2a: ai_cache.content size-capped deserialiser
# (`deserialize_cache_content` in `cache` module).
serde_json = { workspace = true }
thiserror  = { workspace = true }
toml       = { workspace = true }
tracing    = { workspace = true }
uuid       = { workspace = true }

[build-dependencies]
toml = { workspace = true }
