[package]
name         = "ab-core"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Shared types, errors, IDs, build-info constants, and the Tunables config. Zero I/O — pure data + traits."

[lints]
workspace = true

[dependencies]
# argon2id PHF for low-entropy secret material (pairing codes,
# future user passwords). The `password-hash` re-export gives us
# the PHC string format so encoded outputs round-trip
# self-describingly (params + salt embedded).
argon2     = { workspace = true }
# blake3 — fast cryptographic hash for high-entropy API token
# storage. See `auth::hash_api_token` for the "why fast for
# random tokens, why slow for passwords" rationale.
blake3     = { workspace = true }
chrono     = { workspace = true }
# Layered TOML + env config loader for `Tunables::load`. Pulled
# in here (not in the daemon) so every binary that uses
# `Tunables` reaches the same merged value — `aborg` (CLI),
# `aborg-daemon`, and future `aborg-tools` invocations all read
# `config.toml` + AB_* env identically.
figment    = { workspace = true }
# Filesystem-jail validation for trust-zoned paths (ADR-0049).
# Marker types live in `path_jail::types`; we wire them onto
# our trust zones in `path_jail` module.
path_jail  = { workspace = true }
# macOS Keychain backend for the AAX activation-bytes resolver
# (ADR-0053). Default features only — we use the
# `passwords::set_generic_password` / `get_generic_password`
# / `delete_generic_password` surface.
security-framework = { workspace = true }
serde      = { workspace = true }
# B.2a: ai_cache.content size-capped deserialiser
# (`deserialize_cache_content` in `cache` module).
serde_json = { workspace = true }
thiserror  = { workspace = true }
toml       = { workspace = true }
tracing    = { workspace = true }
uuid       = { workspace = true }

[dev-dependencies]
# trust_zones tests build temp jail roots.
tempfile = { workspace = true }

[build-dependencies]
toml = { workspace = true }
