[package]
name         = "ab-covers"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Cover-art handling: HTTP fetch, decode-checked guard, multi-size cache helpers. Owns the single surface for cover bytes across tag-write / shelf / future menubar folder icons (ADR-0030)."

[lints]
workspace = true

[dependencies]
ab-core      = { workspace = true }
futures-util = { workspace = true }
image        = { workspace = true }
reqwest   = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util", "net"] }
