[package]
name         = "ab-db"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Schema, migrations, and typed queries for the library + ephemeral SQLite databases."

[lints]
workspace = true

[dependencies]
ab-core   = { workspace = true }
anyhow    = { workspace = true }
chrono    = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
sqlx      = { workspace = true }
thiserror = { workspace = true }
tokio     = { workspace = true }
tracing   = { workspace = true }
uuid      = { workspace = true }
zstd      = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
