[package]
name         = "ab-fingerprint"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Whole-book chromaprint-based identity fingerprinting. Used for duplicate detection. Distinct from `ab-audiologo` (which fingerprints publisher jingles)."

[lints]
workspace = true

[dependencies]
ab-core   = { workspace = true }
ab-audio  = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
