[package]
name         = "ab-foundation-models"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Apple Intelligence Foundation Models bridge: prompt → text completion via the on-device LLM (macOS 26+). Typed errors, async wrappers. No DB / pipeline dependencies — pipeline stages that consume this surface live in ab-llm-extractors."
build        = "build.rs"

[lints]
workspace = true

[dependencies]
ab-core      = { workspace = true }
# `Stream` trait + helpers — only consumed by `complete_stream`.
futures-util = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
# UnboundedReceiverStream wrapper for the streaming FFI bridge.
tokio-stream = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
