[package]
name         = "ab-progress"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Reading state — status / rating / notes + media_progress cross-device sync. ADR-0033."

[lints]
workspace = true

[dependencies]
ab-core   = { workspace = true }
ab-db     = { workspace = true }
serde     = { workspace = true }
sqlx      = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }

[dev-dependencies]
ab-core  = { workspace = true }
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }
