[package]
name         = "ab-query"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Canonical QueryFilter + SQL executor (ADR-0031). Powers books_list, saved_queries, dispatcher tool-args, search."

[lints]
workspace = true

[dependencies]
ab-core   = { workspace = true }
ab-db     = { workspace = true }
chrono    = { workspace = true }
serde     = { workspace = true }
sqlx      = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile   = { workspace = true }
tokio      = { workspace = true, features = ["macros", "rt-multi-thread"] }
