[package]
name         = "ab-saved-queries"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Saved queries (series_view / smart_filter / dashboard_tile / recently_added / similar_books) backed by ab-query. ADR-0034."

[lints]
workspace = true

[dependencies]
ab-core    = { workspace = true }
ab-db      = { workspace = true }
ab-query   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
sqlx       = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }
