[package]
name         = "ab-scan"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Directory walker + audio-file enumeration. Produces BookId rows in library.db; the rest of the pipeline operates on them."

[lints]
workspace = true

[dependencies]
# C.2c: companion-file discovery + auto-pair geometry. The
# integrator function `scan_companions` lives here so we keep
# `ab-companion` DB-free.
ab-companion = { workspace = true }
ab-core   = { workspace = true }
ab-db     = { workspace = true }
blake3    = { workspace = true }
# B.4: scan watch-folder exclusion globs
# (`PipelineTunables.scan_excludes`).
globset   = { workspace = true }
serde     = { workspace = true }
sqlx      = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
walkdir   = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true }
