[package]
name         = "ab-shelf"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Audiobookshelf-compatible API translation layer. Documented subset only — not full parity. Pins to ABS API v2.x."

[lints]
workspace = true

[dependencies]
ab-core     = { workspace = true }
ab-db       = { workspace = true }
axum        = { workspace = true }
# MIME-type lookup for file-streaming Content-Type. Maps `.m4b`
# → audio/mp4 etc. Standard small crate.
mime_guess  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
# Schema reads for `/api/items/{id}` need compile-time-checked
# queries; the workspace's sqlx setup applies.
sqlx        = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true, features = ["io"] }
tracing     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }
# `tower::ServiceExt::oneshot` for integration-style tests
# against the built Router. Workspace-pinned.
tower    = { workspace = true }
